--- a/src/Components/hero/HeroImgStyles.css
+++ b/src/Components/hero/HeroImgStyles.css
@@ -1,3 +1,10 @@
+.hero{
+    height: 100vh;
+    position: relative;
+    width: 100%;
+    /* border: 1px solid red; */
+
+}
 .mask{
     width: 100%;
     height: 100%;
@@ -17,15 +24,11 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #000;
+    background-color: rgb(31, 31, 31);
     opacity: 0.8;
 }
-.hero{
-    height: 100%;
-    width: 100%;
-
-}
 .hero .content{
+    /* border: 1px solid red; */
     position: absolute;
     transform: translate(-50%,-50%);
     left: 50%;
@@ -47,10 +50,10 @@
 @media screen and (max-width:640px) {
     .hero .content h1{
         font-size: 3rem;
-        /* padding: 0.6rem 0 1.5rem; */
+        padding: 0.6rem 0 1.5rem;
     }
     .hero .content p{
         font-size: 1.4rem;
-        /* -transform: uppercase; */
+        -transform: uppercase;
     }
 }
