--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600&family=Poppins:wght@300;400;500&display=swap');
 *{
     box-sizing: border-box;
-    margin: 0;padding: 0;
+    margin: 0;
+    padding: 0;
     font-family: 'Outfit', sans-serif;
 }
 body{
-    background: rgb(5, 4, 4);
+    background: rgb(28, 27, 27);
 }
 h1,h4,p,a{
     color: rgb(255, 253, 253);
@@ -19,19 +20,20 @@ ul{
 
 .btn{
     padding: 12px 32px;
-    font-style: 1rem;
+    font-size: 1rem;
     text-transform: uppercase;
-    background: rgb(248,217,15);
-    color: #222;
-    border: 1px solid #fff;
+    background-color: rgba(95, 36, 105, 0.441);
     font-weight: 600;
     cursor: pointer;
+    color: #fff;
+    /* box-shadow: rgba(188, 49, 49, 1) 1px 1px 12px 1px; */
+
 }
 .btn-light{
     background: transparent;
     color: #fff;
 }
 .btn-light:hover{
-    background: rgba(255, 255 255, 0.2);
+    background: rgba(25, 25 25, 0.2);
     transition: 0.3s;
 }
