--- a/src/Components/Navbar/NavbarStyles.css
+++ b/src/Components/Navbar/NavbarStyles.css
@@ -2,21 +2,22 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
-    /* border: solid red; */
-    position: fixed;
+    padding: 0 6rem ;
+    position: sticky;
+    top: 0px;
     width: 100%;
-    height: 90px;
+    height: 70px;
     z-index: 10;
-    /* background: red; */
+    background-color: rgb(15,23,44);
+    box-shadow: rgba(11, 155, 212, 0.16) 0px 1px 1px;
 }
-.header-bg{
-    background-color: rgba(0, 0, 0, 0.5);
-    transition: 0.5s;
-
+.highlighter{
+    font-size: 2.2rem;
+    text-transform: uppercase;
 }
 .hamburger{
     display: none;
+    /* color: aqua; */
 }
 .nav-menu{
     display: flex;
@@ -24,29 +25,30 @@
 }
 .nav-menu li{
     padding: 0 1rem;
+    list-style-type: none;
 }
 .nav-menu li a{
-    font-size: 1.2rem;
+    font-size: 1rem;
     cursor: pointer;
     margin-right: 30px;
     font-weight: 500;
 }
-.nav-menu li a:hover{
-    text-decoration: underline;
-    /* color: red; */
-}
+
 @media screen and (max-width:1040px){
+    .header{
+        padding: 20px;
+    }
     .nav-menu{
         flex-direction: column;
-        justify-content: center;
+        /* justify-content: center; */
         align-items: center;
-        width: 100%;
+        width: 50%;
         height: 100vh;
-        background:rgba(1, 1, 1, 0.9);
+        background:rgb(2, 44, 44);
         position: absolute;
-        top: 0;
+        top: 70px;
         left: -100%;
-        transition: 0.3s;
+        transition: 0.7s ease-in-out;
         z-index: -3;
 
 
@@ -65,5 +67,10 @@
     .hamburger{
         display: initial;
         cursor: pointer;
+        color: var(--green);
+        
+    }
+    .menu-bar{
+        color: red;
     }
 }
