--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -12,15 +12,16 @@
     align-items: center;
     justify-content: center;
 }
-/* .a-img-box{
-    border: 6px solid #40f0bb;
+.a-img-box{
     border-radius: 5px;
     width: 100%;
-} */
+    overflow: hidden;
+}
 .a-img-box>img{
     border: 6px solid #40f0bb;
     border-radius: 5px;
     width: 100%;
+    height: 100%;
 }
 .about-name{
     font-size:1.4rem;
