--- a/src/Components/Projects/card.css
+++ b/src/Components/Projects/card.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    margin-bottom: 40px;
 }
 .card-title{
     color: white;
@@ -17,21 +18,32 @@
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
     overflow: hidden;
-    opacity: 0.8;
+    opacity: 0.9;
+    /* border: 1px solid red; */
+    /* object-fit: fill; */
+    width: 80%;
+    margin: auto;
 }
 .card-image-box>img{
     width: 100%;
+    height: 100%;
+    /* object-fit: fill; */
 }
 .card-desc{
     color: white;
     letter-spacing: 1px;
     line-height: 1.6rem;
     font-size: 1rem;
+    text-align: center;
 }
 .tech-stack-container{
     display: grid;
     grid-template-columns: 150px auto;
     color: white;
+    text-align: center;
+    /* width: max-content; */
+    margin: auto;
+    /* border: 1px solid red; */
 }
 .tech-stack-items-container{
     display: flex;
@@ -41,6 +53,7 @@
     text-transform: capitalize;
 }
 .btn-container{
-    display: flex;
-    justify-content: space-between;
+    width: max-content;
+    margin: auto;
+    
 }
