--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -1,5 +1,6 @@
 .footer-container{
-    border-top: 1px solid white;
+    /* border-top: 1px solid white; */
     padding: 40px 0px;
+    /* margin-top: 40px; */
     text-align: center;
 }
