--- a/src/Components/Projects/card.css
+++ b/src/Components/Projects/card.css
@@ -21,7 +21,7 @@
     opacity: 0.9;
     /* border: 1px solid red; */
     /* object-fit: fill; */
-    width: 80%;
+    width: 90%;
     margin: auto;
 }
 .card-image-box>img{
@@ -34,18 +34,18 @@
     letter-spacing: 1px;
     line-height: 1.6rem;
     font-size: 1rem;
-    text-align: center;
+    width: 90%;
+/* border: 1px solid red; */
+margin: auto;
+    /* text-align: center; */
 }
 .tech-stack-container{
-    display: grid;
-    grid-template-columns: 150px auto;
     color: white;
-    text-align: center;
-    /* width: max-content; */
     margin: auto;
     /* border: 1px solid red; */
 }
 .tech-stack-items-container{
+    margin-top: 14px;
     display: flex;
     flex-wrap: wrap;
 }
