--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -18,7 +18,7 @@
     overflow: hidden;
 }
 .a-img-box>img{
-    border: 6px solid #40f0bb;
+    /* border: 6px solid #40f0bb; */
     border-radius: 5px;
     width: 100%;
     height: 100%;
