--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,9 +1,14 @@
 .contact-container {
   /* border: 1px solid white; */
-  margin: 20px 0;
-  padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* margin: 20px 0;
+  padding-bottom: 30px; */
 }
 .Contatct-Information {
+  /* border: 1px solid white; */
   color: white;
   font-size: 30px;
   margin: 20px 0;
@@ -11,46 +16,118 @@
   /* margin-bottom: 30px; */
 }
 .c-wrapper {
-  grid-gap: 40px;
   display: grid;
+  grid-gap: 40px;
   gap: 40px;
-  grid-template-columns: repeat(3, 1fr);
+  /* border: 2px solid white; */
+  grid-template-columns: repeat(2, 1fr);
+  /* border: 1px solid white; */
+}
+.icon-grid {
+  display: grid;
+
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
 }
 .box {
+  justify-content: center;
   display: flex;
   align-items: center;
   padding: 10px;
   border-radius: 4px;
-  box-shadow: 0 0 1px 1px hsl(0deg 4% 89% / 15%);
+  cursor: pointer;
+  border: 1px solid rgb(160, 5, 5);
 }
-.icon-box {
-  background-color: red;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  background-color: rgb(54, 77, 90);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
-  margin-right: 15px;
+.box a {
+  text-decoration: none;
 }
+.box:hover {
+  background-color: rgb(239, 8, 47);
+  /* background-color: var(--green); */
+}
+
 .c-icons {
   color: var(--green);
-}
-.info-box {
   color: white;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
+  font-size: 25px;
+  margin-right: 10px;
+}
+.firebase-form {
+  width: 70%;
+  margin: auto;
+  margin-top: 50px;
+  /* margin-top: 20px; */
+  /* border: 2px solid white; */
+  /* height: 100%; */
+}
+.firebase-form input {
+  padding-left: 10px;
+  width: 100%;
+  border: 2px solid rgb(160, 5, 5);
+  /* border: 2px solid var(--green); */
+  border-radius: 2px;
+  background-color: transparent;
+  height: 30px;
+  color: white;
+  margin: 10px 0;
+}
+
+.send-button:hover {
+  background-color: rgb(222, 11, 11);
+}
+.firebase-form input:focus,
+textarea:focus {
+  outline: 2px solid cyan;
+  border: none;
+}
+.firebase-form input::placeholder,
+textarea::placeholder {
+  color: white;
+  margin-top: 10px;
+}
+textarea {
+  padding-left: 10px;
+  padding-top: 10px;
+  width: 100%;
+  color: white;
+  border-radius: 2px;
+  background-color: transparent;
+  border: 2px solid rgb(160, 5, 5);
+  /* border: 2px solid var(--green); */
+}
+.send-button {
+  border: none;
+  background-color: rgb(235, 34, 34);
+  /* background-color: rgb(160, 5, 5); */
+  /* background-color: var(--green); */
+  color: white;
+  padding: 10px 15px;
+  margin-top: 20px;
+  width: 100%;
+  border-radius: 4px;
+  font-weight: bold;
+  cursor: pointer;
 }
 @media (max-width: 1040px) {
   .c-wrapper {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .firebase-form {
+    width: 100%;
+  }
+  .contact-image {
+    display: none;
   }
 }
 @media (max-width: 500px) {
   .c-wrapper {
+    /* border: 2px solid red; */
     grid-template-columns: repeat(1, 1fr);
+  }
+  .firebase-form {
+    width: 100%;
+  }
+  .contact-image {
+    display: none;
   }
 }
