--- a/src/Components/Navbar/NavbarStyles.css
+++ b/src/Components/Navbar/NavbarStyles.css
@@ -1,76 +1,87 @@
-.header{
-    display: flex;
-    justify-content: space-between;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 6rem;
+  position: sticky;
+  top: 0px;
+  width: 100%;
+  height: 70px;
+  z-index: 10;
+  background-color: rgb(16, 30, 65);
+  box-shadow: rgba(11, 155, 212, 0.16) 0px 1px 1px;
+}
+.hightlight {
+  font-size: 2.3rem;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.hamburger {
+  display: none;
+  /* color: aqua; */
+}
+.nav-menu {
+  display: flex;
+}
+.nav-menu li {
+  padding: 0 1rem;
+  list-style-type: none;
+}
+.nav-menu li a {
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  cursor: pointer;
+  margin-right: 30px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.nav-menu li a:hover {
+  background-color: var(--green);
+}
+
+@media screen and (max-width: 1040px) {
+  .header {
+    padding: 20px;
+  }
+  .nav-menu {
+    flex-direction: column;
+    justify-content: space-around;
+    /* gap: 40px; */
+    border: 1px solid d red;
     align-items: center;
-    padding: 0 6rem ;
-    position: sticky;
-    top: 0px;
     width: 100%;
-    height: 70px;
-    z-index: 10;
-    background-color: rgb(15,23,44);
-    box-shadow: rgba(11, 155, 212, 0.16) 0px 1px 1px;
-}
-.highlighter{
-    font-size: 2.2rem;
-    text-transform: uppercase;
-}
-.hamburger{
-    display: none;
-    /* color: aqua; */
-}
-.nav-menu{
-    display: flex;
+    height: 90vh;
+    background: #2d3748;
 
-}
-.nav-menu li{
-    padding: 0 1rem;
-    list-style-type: none;
-}
-.nav-menu li a{
-    font-size: 1rem;
+    position: absolute;
+    top: 70px;
+    left: -100%;
+    transition: 0.3s;
+    z-index: 500;
+  }
+  .nav-menu.active {
+    left: 0;
+  }
+  .nav-menu li {
+    /* padding: 1rem 0; */
+    /* background-color: red; */
+    /* font-size: 50px; */
+    /* border: 1px solid red; */
+  }
+  .nav-menu li a {
+    /* font-style: 2rem; */
+    /* color: red; */
+    /* border: 1px solid var(--green); */
+    font-size: 30px;
+  }
+  .hamburger {
+    display: initial;
     cursor: pointer;
-    margin-right: 30px;
-    font-weight: 500;
-}
-
-@media screen and (max-width:1040px){
-    .header{
-        padding: 20px;
-    }
-    .nav-menu{
-        flex-direction: column;
-        /* justify-content: center; */
-        align-items: center;
-        width: 50%;
-        height: 100vh;
-        background:rgb(2, 44, 44);
-        position: absolute;
-        top: 70px;
-        left: -100%;
-        transition: 0.3s ;
-        z-index: 500;
-
-
-    }
-    .nav-menu.active{
-        left: 0;
-    }
-    .nav-menu li{
-        padding: 1rem 0;
-        /* background-color: red; */
-
-    }
-    .nav-menu li a{
-        font-style: 2rem;
-    }
-    .hamburger{
-        display: initial;
-        cursor: pointer;
-        color: var(--green);
-        
-    }
-    .menu-bar{
-        color: red;
-    }
+    color: var(--green);
+  }
+  .menu-bar {
+    color: red;
+  }
 }
