--- a/src/index.css
+++ b/src/index.css
@@ -1,74 +1,78 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600&family=Poppins:wght@300;400;500&display=swap');
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600&family=Poppins:wght@300;400;500&display=swap");
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "poppins", sans-serif;
+  /* font-family: "roboto", sans-serif; */
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-:root{
-    --green:rgb(114,226,174);
+:root {
+  --green: rgb(114, 226, 174);
+  --green: rgb(235, 34, 34);
 }
-body{
-    background: rgb(15,23,44);
+body {
+  background: rgb(15, 23, 44);
 }
-img{
+img {
+  width: 100%;
+}
+.green {
+  color: var(--green);
+}
+.white {
+  color: white;
+}
+.btn {
+  background-color: #72e2ae;
+  background-color: var(--green);
+  border: none;
+  border-radius: 4px;
+  /* color: #000; */
+  cursor: pointer;
+  letter-spacing: 1px;
+  padding: 0.6rem 1rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  /* background-color: rgb(223, 6, 6); */
+  color: white;
+
+  border: none;
+  border-radius: 4px;
+  /* color: #000; */
+  background-color: var(--green);
+  cursor: pointer;
+  letter-spacing: 1px;
+  padding: 0.6rem 1rem;
+  text-decoration: none;
+}
+
+.title {
+  text-transform: capitalize;
+  color: #fff;
+  border-bottom: 5px solid var(--green);
+  font-size: 1.9rem;
+  width: fit-content;
+  text-align: center;
+  letter-spacing: 2px;
+  margin: 50px 0;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.flex {
+  display: flex;
+}
+.layout {
+  margin: auto;
+  padding: 50px 0;
+  width: 85%;
+}
+@media (max-width: 1040px) {
+  .layout {
+    padding: 0 10px;
     width: 100%;
+  }
 }
-.green{
-    color: rgb(114,226,174);
-}
-.white{
-    color: white;
-}
-.btn{
-    background-color: #72e2ae;
-    background-color: var(--green);
-    border: none;
-    border-radius: 4px;
-    color: #000;
-    cursor: pointer;
-    letter-spacing: 1px;
-    padding: 0.6rem 1rem;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    background-color: #72e2ae;
-    background-color: var(--green);
-    border: none;
-    border-radius: 4px;
-    color: #000;
-    cursor: pointer;
-    letter-spacing: 1px;
-    padding: 0.6rem 1rem;
-    text-decoration: none;
-}
-
-.title{
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 1.9rem;
-    letter-spacing: 2px;
-    margin: 50px 0;
-    text-align: center;
-   margin-bottom: 40px;
-}
-.flex{
-    display: flex;
-}
-.layout{
-    margin: auto;
-    padding: 50px 0;
-    width: 85%;
-}
-@media(max-width:1040px){
-    .layout{
-        padding:0 10px;
-        width: 100%;
-
-    }
-}
-
-
