--- a/src/Components/Projects/card.css
+++ b/src/Components/Projects/card.css
@@ -1,59 +1,67 @@
-.card-container{
-    box-shadow: rgba(219, 215, 215, 0.24) 0px 3px 8px;
-    border-radius: 0.5rem;
-    overflow: hidden;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    margin-bottom: 40px;
+.card-container {
+  box-shadow: rgba(219, 215, 215, 0.24) 0px 3px 8px;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-bottom: 40px;
 }
-.card-title{
-    color: white;
-    font-size: 1.5rem;
-    text-align: center;
-    text-transform: capitalize;
+.card-title {
+  color: white;
+  font-size: 1.5rem;
+  text-align: center;
+  text-transform: capitalize;
 }
-.card-image-box{
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    overflow: hidden;
-    opacity: 0.9;
-    /* border: 1px solid red; */
-    /* object-fit: fill; */
-    width: 90%;
-    margin: auto;
+.card-image-box {
+  border-top-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  overflow: hidden;
+  opacity: 0.9;
+  /* border: 1px solid red; */
+  /* object-fit: fill; */
+  width: 90%;
+  margin: auto;
 }
-.card-image-box>img{
-    width: 100%;
-    height: 100%;
-    /* object-fit: fill; */
+.card-image-box > img {
+  width: 100%;
+  height: 100%;
+  /* object-fit: fill; */
 }
-.card-desc{
-    color: white;
-    letter-spacing: 1px;
-    line-height: 1.6rem;
-    font-size: 1rem;
-    width: 90%;
-/* border: 1px solid red; */
-margin: auto;
-    /* text-align: center; */
+.card-desc {
+  color: white;
+  letter-spacing: 1px;
+  line-height: 1.6rem;
+  font-size: 1rem;
+  width: 90%;
+  /* border: 1px solid red; */
+  margin: auto;
+  /* text-align: center; */
 }
-.tech-stack-container{
-    color: white;
-    margin: auto;
-    /* border: 1px solid red; */
+.tech-stack-container {
+  color: white;
+  margin: auto;
+  /* border: 1px solid red; */
 }
-.tech-stack-items-container{
-    margin-top: 14px;
-    display: flex;
-    flex-wrap: wrap;
+.tech-stack-items-container {
+  margin-top: 14px;
+  display: flex;
+  flex-wrap: wrap;
 }
-.tech-title{
-    text-transform: capitalize;
+.tech-title {
+  text-transform: capitalize;
 }
-.btn-container{
-    width: max-content;
-    margin: auto;
-    
+.btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.source {
+  background-color: rgb(231, 76, 76);
+  background-color: transparent;
+  border: 1px solid white;
+}
+.source:hover {
+  border: none;
 }
