--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ img {
 .title {
   text-transform: capitalize;
   color: #fff;
+  padding: 0 60px;
   border-bottom: 5px solid var(--green);
   font-size: 2.5rem;
   width: fit-content;
