--- a/src/Components/Navbar/NavbarStyles.css
+++ b/src/Components/Navbar/NavbarStyles.css
@@ -12,7 +12,8 @@
   box-shadow: rgba(11, 155, 212, 0.16) 0px 1px 1px;
 }
 .hightlight {
-  font-size: 2.3rem;
+  /* font-size: 2.5vw; */
+  font-size: 40px;
   cursor: pointer;
   text-transform: uppercase;
 }
@@ -49,10 +50,10 @@
     flex-direction: column;
     justify-content: space-around;
     /* gap: 40px; */
-    border: 1px solid d red;
+    /* border: 1px solid d red; */
     align-items: center;
     width: 100%;
-    height: 90vh;
+    height: 93vh;
     background: #2d3748;
 
     position: absolute;
@@ -64,12 +65,7 @@
   .nav-menu.active {
     left: 0;
   }
-  .nav-menu li {
-    /* padding: 1rem 0; */
-    /* background-color: red; */
-    /* font-size: 50px; */
-    /* border: 1px solid red; */
-  }
+
   .nav-menu li a {
     /* font-style: 2rem; */
     /* color: red; */
@@ -83,5 +79,13 @@
   }
   .menu-bar {
     color: red;
+  }
+  .hightlight {
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .hightlight {
+    font-size: 30px;
   }
 }
