--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,13 @@
   font-family: "poppins", sans-serif;
   /* font-family: "roboto", sans-serif; */
 }
+
 a {
   text-decoration: none;
 }
 :root {
-  --green: rgb(114, 226, 174);
-  --green: rgb(235, 34, 34);
+  /* --green: rgb(114, 226, 174); */
+  --green: rgb(240, 68, 68);
 }
 body {
   background: rgb(15, 23, 44);
@@ -19,6 +20,7 @@ body {
 img {
   width: 100%;
 }
+
 .green {
   color: var(--green);
 }
@@ -55,7 +57,8 @@ img {
   color: #fff;
   padding: 0 60px;
   border-bottom: 5px solid var(--green);
-  font-size: 2.5rem;
+  /* font-size: 2.5rem; */
+  font-size: 3.5vw;
   width: fit-content;
   text-align: center;
   letter-spacing: 2px;
