--- a/src/Components/Navbar/NavbarStyles.css
+++ b/src/Components/Navbar/NavbarStyles.css
@@ -7,7 +7,7 @@
   top: 0px;
   width: 100%;
   height: 70px;
-  z-index: 10;
+  z-index: 500;
   background-color: rgb(16, 30, 65);
   box-shadow: rgba(11, 155, 212, 0.16) 0px 1px 1px;
 }
@@ -54,6 +54,7 @@
     align-items: center;
     width: 100%;
     height: 93vh;
+    /* height: calc(100%-70px); */
     background: #2d3748;
 
     position: absolute;
@@ -86,6 +87,6 @@
 }
 @media screen and (max-width: 768px) {
   .hightlight {
-    font-size: 30px;
+    font-size: 25px;
   }
 }
