--- a/src/Components/Navbar/NavbarStyles.css
+++ b/src/Components/Navbar/NavbarStyles.css
@@ -47,16 +47,12 @@
     padding: 20px;
   }
   .nav-menu {
+    backdrop-filter: blur(20px);
     flex-direction: column;
     justify-content: space-around;
-    /* gap: 40px; */
-    /* border: 1px solid d red; */
     align-items: center;
     width: 100%;
-    height: 93vh;
-    /* height: calc(100%-70px); */
-    background: #2d3748;
-
+    height: calc(100vh - 70px);
     position: absolute;
     top: 70px;
     left: -100%;
