--- a/src/Components/Projects/card.css
+++ b/src/Components/Projects/card.css
@@ -5,7 +5,7 @@
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 15px;
   margin-bottom: 40px;
 }
 .card-title {
@@ -13,6 +13,13 @@
   font-size: 1.5rem;
   text-align: center;
   text-transform: capitalize;
+  /* background-color: #0f77a8; */
+  /* border-radius: 10px; */
+  /* width: fit-content; */
+  /* padding: 5px ; */
+  border: 4px solid;
+  padding-bottom: 10px;
+  border-color: transparent transparent #ed1621;
 }
 .card-image-box {
   border-top-left-radius: 20px;
@@ -48,9 +55,21 @@
   margin-top: 14px;
   display: flex;
   flex-wrap: wrap;
+  gap: 9px;
+  /* display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 15px; */
 }
 .tech-title {
   text-transform: capitalize;
+}
+.tech-item {
+  padding: 5px 10px;
+  background-color: #0f77a8;
+  border-radius: 3px;
+  text-transform: capitalize;
+  text-align: center;
+  font-size: 12px;
 }
 .btn-container {
   width: 100%;
@@ -58,9 +77,9 @@
   justify-content: space-around;
 }
 .source {
-  background-color: rgb(231, 76, 76);
-  background-color: transparent;
-  border: 1px solid white;
+  /* background-color: rgb(231, 76, 76); */
+  /* background-color: transparent; */
+  /* border: 1px solid white; */
 }
 .source:hover {
   border: none;
